tests/ui/modules/use-statement-duplicate-check-7663.explicit_explicit.stderr
error[E0252]: the name `p` is defined multiple times
  --> $DIR/use-statement-duplicate-check-7663.rs:34:9
   |
LL |     use crate::foo::p;
   |         ------------- previous import of the value `p` here
LL |     use crate::bar::p;
   |         ^^^^^^^^^^^^^ `p` reimported here
   |
   = note: `p` must be defined only once in the value namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL |     use crate::bar::p as other_p;
   |                       ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0252`.
